safari fix because svg header image doesnt work on safari. changed to png

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	height: 903px;
 
-	background: url("../images/background.PNG") no-repeat center center fixed;
+	background: url("../images/background.png") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
